--- a/tmux.conf
+++ b/tmux.conf
@@ -60,5 +60,6 @@ bind -n S-Right next-window
 # set-option -g mouse-select-window on
 # set-window-option -g mode-mouse on
 
-set-option -g update-environment " SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION"
-
+# allow proper ssh agent forwarding when reattaching
+if-shell 'test "$SSH_CONNECTION"' "set -g update-environment 'DISPLAY WINDOWID XAUTHORITY'"
+if-shell 'test "$SSH_CONNECTION"' "set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock"
