--- a/tmux.conf
+++ b/tmux.conf
@@ -63,3 +63,11 @@ bind -n S-Right next-window
 # allow proper ssh agent forwarding when reattaching
 if-shell 'test "$SSH_CONNECTION"' "set -g update-environment 'DISPLAY WINDOWID XAUTHORITY'"
 if-shell 'test "$SSH_CONNECTION"' "set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock"
+
+set-option -g status-bg colour233
+set-option -g status-fg colour243
+set-option -g status-attr dim
+set-option -g status-utf8 on
+set-option -g status-justify centre
+set-option -g window-status-current-fg brightred
+set-option -g window-status-current-attr dim
