--- a/tmux.conf
+++ b/tmux.conf
@@ -64,8 +64,8 @@ bind -n S-Right next-window
 if-shell 'test "$SSH_CONNECTION"' "set -g update-environment 'DISPLAY WINDOWID XAUTHORITY'"
 if-shell 'test "$SSH_CONNECTION"' "set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock"
 
-set-option -g status-bg colour233
-set-option -g status-fg colour243
+set-option -g status-bg black
+set-option -g status-fg black
 set-option -g status-attr dim
 set-option -g status-utf8 on
 set-option -g status-justify centre
