YES. Fix the cursor in vim and iterm

--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -1,6 +1,8 @@
 # improve colors
 set -g default-terminal 'screen-256color'
 
+set -g escape-time 10
+
 # act like vim
 setw -g mode-keys vi
 bind h select-pane -L
