--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -1,7 +1,7 @@
 # improve colors
 set -g default-terminal 'screen-256color'
 
-set -g escape-time 10
+set -g escape-time 0
 
 # act like vim
 setw -g mode-keys vi
@@ -19,9 +19,6 @@ set -g prefix C-a
 
 bind-key C-a send-prefix
 
-#last window
-# bind-key C-a last-window
-
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
 set-window-option -g pane-base-index 1
@@ -30,10 +27,6 @@ set-window-option -g automatic-rename off
 # soften status bar color from harsh green to light gray
 set -g status-bg '#666666'
 set -g status-fg '#aaaaaa'
-
-# remove administrative debris (session name, hostname, time) in status bar
-# set -g status-left ''
-# set -g status-right ''
 
 # increase scrollback lines
 set -g history-limit 10000
@@ -56,13 +49,12 @@ bind o paste-buffer
 bind -n S-Left previous-window
 bind -n S-Right next-window
 
-# set-option -g mouse-select-pane on
-# set-option -g mouse-select-window on
-# set-window-option -g mode-mouse on
-
 # allow proper ssh agent forwarding when reattaching
 if-shell 'test "$SSH_CONNECTION"' "set -g update-environment 'DISPLAY WINDOWID XAUTHORITY'"
 if-shell 'test "$SSH_CONNECTION"' "set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock"
+
+if-shell 'test "$LIGHT_SHELL"' "set -g status-bg white"
+if-shell 'test "$LIGHT_SHELL"' "set -g status-fg black"
 
 set-option -g status-bg black
 set-option -g status-fg black
