--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -3,6 +3,10 @@ set -g default-terminal 'screen-256color'
 
 set -g escape-time 0
 
+set -g default-shell $SHELL
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+set-window-option -g automatic-rename on
+
 # act like vim
 setw -g mode-keys vi
 bind h select-pane -L
@@ -18,11 +22,6 @@ unbind C-b
 set -g prefix C-a
 
 bind-key C-a send-prefix
-
-# start window numbers at 1 to match keyboard order with tmux window order
-set -g base-index 1
-set-window-option -g pane-base-index 1
-set-window-option -g automatic-rename off
 
 # soften status bar color from harsh green to light gray
 set -g status-bg '#666666'
