--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -24,11 +24,11 @@ set -g prefix C-a
 bind-key C-a send-prefix
 
 # soften status bar color from harsh green to light gray
-set -g status-bg '#666666'
-set -g status-fg '#aaaaaa'
+set -g status-bg '#474745'
+set -g status-fg '#d4d4cd'
 
 # increase scrollback lines
-set -g history-limit 10000
+set -g history-limit 999999
 
 # vim's definition of a horizontal/vertical split is reversed from tmux's
 bind-key s split-window -v
@@ -55,9 +55,11 @@ if-shell 'test "$SSH_CONNECTION"' "set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh
 if-shell 'test "$LIGHT_SHELL"' "set -g status-bg white"
 if-shell 'test "$LIGHT_SHELL"' "set -g status-fg black"
 
-set-option -g status-bg black
-set-option -g status-fg black
-set-option -g status-attr dim
-set-option -g status-justify centre
-set-option -g window-status-current-fg brightred
-set-option -g window-status-current-attr dim
+set -g status-attr dim
+set -g status-justify centre
+set -g window-status-current-fg brightred
+set -g window-status-current-attr dim
+
+# display UTC time, local time in status bar
+set -g status-right "%Y-%m-%dT%H:%M:%S%z  "
+set -g status-right-length 220
