Abandon the thought of switching between light and dark shells

--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -52,8 +52,8 @@ bind -n S-Right next-window
 if-shell 'test "$SSH_CONNECTION"' "set -g update-environment 'DISPLAY WINDOWID XAUTHORITY'"
 if-shell 'test "$SSH_CONNECTION"' "set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock"
 
-if-shell 'test "$LIGHT_SHELL"' "set -g status-bg white"
-if-shell 'test "$LIGHT_SHELL"' "set -g status-fg black"
+# if-shell 'test "$LIGHT_SHELL"' "set -g status-bg white"
+# if-shell 'test "$LIGHT_SHELL"' "set -g status-fg black"
 
 set -g status-attr dim
 set -g status-justify centre
