Update tmux conf to correctly set status bar styles

--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -16,11 +16,9 @@ bind l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
-# act like GNU screen
+# prefer <ctl>-a as leader
 unbind C-b
-
 set -g prefix C-a
-
 bind-key C-a send-prefix
 
 # soften status bar color from harsh green to light gray
@@ -55,11 +53,11 @@ if-shell 'test "$SSH_CONNECTION"' "set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh
 # if-shell 'test "$LIGHT_SHELL"' "set -g status-bg white"
 # if-shell 'test "$LIGHT_SHELL"' "set -g status-fg black"
 
-set -g status-attr dim
+set -g status-style dim
 set -g status-justify centre
-set -g window-status-current-fg brightred
-set -g window-status-current-attr dim
+set -g window-status-current-style dim
+set -g window-status-current-style fg=brightred
 
-# display UTC time, local time in status bar
+# display local time with UTC offset in status bar
 set -g status-right "%Y-%m-%dT%H:%M:%S%z  "
 set -g status-right-length 220
