--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -1,5 +1,6 @@
 # improve colors
 set -g default-terminal 'screen-256color'
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 
 set -g escape-time 0
 
@@ -22,8 +23,8 @@ set -g prefix C-a
 bind-key C-a send-prefix
 
 # soften status bar color from harsh green to light gray
-set -g status-bg '#474745'
-set -g status-fg '#d4d4cd'
+# set -g status-bg '#474745'
+# set -g status-fg '#d4d4cd'
 
 # increase scrollback lines
 set -g history-limit 999999
