Only use tmux reattach-to-user-namespace on Mac

--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -5,7 +5,10 @@ set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 set -g escape-time 0
 
 set -g default-shell $SHELL
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+
+# If on Mac, use reattach-to-user-namespace
+if-shell -b '[ "$(uname -s)" = "Darwin" ]' "set -g default-command 'reattach-to-user-namespace -l ${SHELL}'"
+
 set-window-option -g automatic-rename on
 
 # act like vim
