--- a/files/config/nvim/coc-settings.json
+++ b/files/config/nvim/coc-settings.json
@@ -1,5 +1,5 @@
 {
-  "[elm][javascript][eruby][ruby][typescript][typescriptreact][yaml][lua][json][css][python][toml]": {
+  "[elm][javascript][eruby][ruby][typescript][typescriptreact][yaml][lua][json][css][python][toml][terraform][hcl]": {
     "coc.preferences.formatOnSave": true
   },
   "codeLens.enable": true,
@@ -30,7 +30,8 @@
       ],
       "filetypes": [
         "terraform",
-        "tf"
+        "tf",
+        "hcl"
       ],
       "initializationOptions": {}
     },
