--- a/files/config/efm-langserver/config.yaml
+++ b/files/config/efm-langserver/config.yaml
@@ -9,7 +9,11 @@ tools:
   erb-formatter: &erb-formatter
     format-debounce: 2s
     format-stdin: true
-    format-command: bundle exec erb-format --print-width=80 --stdin --tailwind-output-path=app/assets/builds/application.css
+    format-command: bundle exec erb-format --print-width=80 --no-split-classes --stdin
+
+  rustywind: &rustywind
+    format-stdin: true
+    format-command: rustywind --stdin
 
   rubyfmt: &rubyfmt
     format-stdin: true
@@ -20,5 +24,7 @@ languages:
   #   - <<: *rubyfmt
   html:
     - <<: *erb-formatter
+    - <<: *rustywind
   eruby:
     - <<: *erb-formatter
+    - <<: *rustywind
