--- a/agents/devcontainer/devcontainer.json
+++ b/agents/devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
   },
   "features": {
     "ghcr.io/devcontainers/features/common-utils:2": {
-      "installZsh": false,
+      "installZsh": true,
       "installOhMyZsh": false,
       "upgradePackages": false
     }
