tmux: keep split windows in current pane path

--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -33,8 +33,8 @@ bind-key C-a send-prefix
 set -g history-limit 999999
 
 # vim's definition of a horizontal/vertical split is reversed from tmux's
-bind-key s split-window -v
-bind-key v split-window -h
+bind-key s split-window -v -c "#{pane_current_path}"
+bind-key v split-window -h -c "#{pane_current_path}"
 
 # resize panes like vim
 bind-key -r < resize-pane -L 3
